--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "mime": "~1.2.6",
-    "mocha": "~1.3.0",
     "diveSync": "~0.2.0",
     "sync": "~v0.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "*"
+  },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
