--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "mime": "~1.2.6",
     "diveSync": "~0.2.0",
-    "sync": "~v0.2.1"
+    "sync": "~v0.2.1",
+    "node_hash": "~0.2.0"
   },
   "devDependencies": {
     "mocha": "*"
