--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Treat already-buffered data as a stream",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   ],
   "author": "Carlos Rodriguez",
   "license": "MIT",
-  "dependencies": {
-    "mocha": "~1.3.0"
+  "devDpendencies": {
+    "mocha": "*"
   }
 }
