--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gzip-buffer": "0.0.2",
     "fs-watch-tree": "~0.2.2"
   },
+  "keywords": ["static", "middleware", "server", "file", "buffer"],
   "devDependencies": {
     "mocha": "*",
     "idgen": "1.x",
