Use glob.sync instead of diveSync

--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "mime": "~1.2.6",
-    "diveSync": "~0.2.0",
     "node_hash": "~0.2.0",
     "gzip-buffer": "0.0.2",
-    "fs-watch-tree": "~0.2.2"
+    "fs-watch-tree": "~0.2.2",
+    "glob": "~3.1.10"
   },
-  "keywords": ["static", "middleware", "server", "file", "buffer"],
+  "keywords": [
+    "static",
+    "middleware",
+    "server",
+    "file",
+    "buffer"
+  ],
   "devDependencies": {
     "mocha": "*",
     "idgen": "1.x",
