Built-in server started

--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "type": "git",
     "url": "git://github.com/carlos8f/node-buffet.git"
   },
+  "license": "MIT",
   "dependencies": {
     "mime": "~1.2.6",
     "node_hash": "~0.2.0",
     "gzip-buffer": "0.0.2",
     "fs-watch-tree": "~0.2.2",
-    "glob": "~3.1.10"
+    "glob": "~3.1.10",
+    "optimist": "~0.3.4",
+    "accesslog": "~0.0.0"
   },
   "keywords": [
     "static",
