--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "mime": "~1.2.6",
     "node_hash": "~0.2.0",
     "gzip-buffer": "0.0.2",
-    "fs-watch-tree": "~0.2.2",
     "glob": "~3.1.10",
     "optimist": "~0.3.4",
-    "accesslog": "~0.0.1"
+    "accesslog": "~0.0.1",
+    "watchr": "~2.1.2"
   },
   "keywords": [
     "static",
