--- a/bench/package.json
+++ b/bench/package.json
@@ -4,10 +4,11 @@
   "dependencies": {
     "idgen": "~1.1.1",
     "ecstatic": "~0.1.6",
-    "connect": "~2.4.4",
     "node-static": "~0.6.0",
-    "middler": "~0.4.4",
-    "paperboy": "0.0.5",
-    "send": "0.0.4"
+    "middler": "~0.4.5",
+    "paperboy": "~0.0.5",
+    "send": "~0.0.4",
+    "glob": "~3.1.12",
+    "async": "~0.1.22"
   }
 }
