--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "fs-watch-tree": "~0.2.2",
     "glob": "~3.1.10",
     "optimist": "~0.3.4",
-    "accesslog": "~0.0.1"
+    "accesslog": "~0.0.1",
+    "middler": "~0.4.5"
   },
   "keywords": [
     "static",
