switch to benchmarx

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mocha": "*",
     "idgen": "1.x",
     "rimraf": "2.x",
-    "ncp": "~0.2.6"
+    "ncp": "~0.2.6",
+    "benchmarx": "~0.1.0"
   },
   "optionalDependencies": {},
   "engines": {
