--- a/bench/package.json
+++ b/bench/package.json
@@ -2,13 +2,9 @@
   "name": "buffet-benchmarks",
   "version": "0.0.0",
   "dependencies": {
-    "idgen": "~1.1.1",
     "ecstatic": "~0.1.6",
     "node-static": "~0.6.0",
-    "middler": "~0.4.5",
     "paperboy": "~0.0.5",
-    "send": "~0.0.4",
-    "glob": "~3.1.12",
-    "async": "~0.1.22"
+    "send": "~0.0.4"
   }
 }
