--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "idgen": "1.x",
     "rimraf": "2.x",
     "ncp": "~0.2.6",
-    "benchmarx": "~0.2.0"
+    "benchmarx": "~0.2.0",
+    "request": "~2.11.4",
+    "middler": "~0.4.7"
   },
   "optionalDependencies": {},
   "engines": {
