add st to benchmarks

--- a/bench/package.json
+++ b/bench/package.json
@@ -6,6 +6,7 @@
     "node-static": "~0.6.0",
     "paperboy": "~0.0.5",
     "send": "~0.0.4",
-    "connect": "~2.5.0"
+    "connect": "~2.5.0",
+    "st": "0.0.11"
   }
 }
