--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "mime": "~1.2.6",
-    "node_hash": "~0.2.0",
-    "gzip-buffer": "0.0.2",
     "fs-watch-tree": "~0.2.2",
     "glob": "~3.1.10",
     "accesslog": "~0.0.1",
     "middler": "~0.4.5",
-    "commander": "~1.0.2"
+    "commander": "~1.0.2",
+    "dish": "~0.1.0"
   },
   "keywords": [
     "static",
