--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "buffer"
   ],
   "devDependencies": {
-    "benchmarx": "^0.2.5",
+    "debug": "^3.1.0",
     "idgen": "^2.0.2",
-    "mocha": "^2.4.5",
+    "minimatch": "^3.0.4",
+    "mocha": "^5.2.0",
     "ncp": "^2.0.0",
     "request": "^2.72.0",
     "rimraf": "^2.5.2"
